fix: fix welcome post spacing

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -26,7 +26,7 @@ strong, b, a {
 }
 
 .entry-content p {
-  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .post-content img {
